[package]
name = "consensus_testbed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bincode = "1"
bytes = "1"
pea2pea = "0.45"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
